--- a/styles/who-we-are/who_we_are.scss
+++ b/styles/who-we-are/who_we_are.scss
@@ -4,12 +4,51 @@
     padding-top: 6%;
     padding-bottom: 6%;
     min-height: 100vh;
+    // display: flex;
     .text{
         text-align: center;
         h1{
             color: #fff;
             font-size: 42px;
             margin: 0;
+        }
+    }
+    .left_arrow{
+        margin-left: -100px;
+        width: 100px;
+        transition: margin 0.9s;
+        // background-color: transparent;
+        position: absolute;
+        height: 100%;
+        left: 0;
+        z-index: 6;
+        display: flex;
+        cursor: pointer;
+        background-image: linear-gradient(-90deg, transparent, #343954);
+        svg{
+            fill: #fff;
+            width: 60px;
+            margin: auto;
+            opacity: 0.8;
+        }
+    }
+    .right_arrow{
+        width: 100px;
+        margin-right: -100px;
+        cursor: pointer;
+        transition: margin 0.9s;
+        // background-color: transparent;
+        background-image: linear-gradient(-90deg, #343954, transparent);
+        position: absolute;
+        height: 100%;
+        right: 0;
+        top: 0;
+        display: flex;
+        svg{
+            fill: #fff;
+            width: 60px;
+            margin: auto;
+            opacity: 0.8;
         }
     }
     .horizontal_time_line{
