--- a/styles/who-we-are/who_we_are.scss
+++ b/styles/who-we-are/who_we_are.scss
@@ -3,7 +3,7 @@
     background-color: #353a54;
     padding-top: 6%;
     padding-bottom: 6%;
-    min-height: 100vh;
+    // min-height: 100vh;
     // display: flex;
     .text{
         text-align: center;
@@ -367,7 +367,12 @@ $box-shadow2: ();
 
 @media only screen and (max-width: 768px){
     .time_line_his{
-        
+        .left_arrow{
+            display: none !important;
+        }
+        .right_arrow{
+            display: none !important;
+        }
         .horizontal_time_line{
             width: auto;
             .time_line_year{
@@ -384,6 +389,12 @@ $box-shadow2: ();
             h1{   
                 font-size: 2.1rem;
             }
+        }
+        .left_arrow{
+            display: none !important;
+        }
+        .right_arrow{
+            display: none !important;
         }
         .horizontal_time_line{
             width: auto;
@@ -416,6 +427,12 @@ $box-shadow2: ();
 
 @media only screen and (max-width: 321px){
     .time_line_his{
+        .left_arrow{
+            display: none !important;
+        }
+        .right_arrow{
+            display: none !important;
+        }
         .horizontal_time_line{
             width: auto;
             .time_line_year{
