--- a/styles/who-we-are/who_we_are.scss
+++ b/styles/who-we-are/who_we_are.scss
@@ -402,6 +402,7 @@ $box-shadow2: ();
                 padding-left: 20px;
                 margin: 60px 0px 0 0px;
                 ul{
+                    min-height: 450px;
                     padding-left: 50px;
                     .year_title{
                         top: -38px;
