--- a/styles/who-we-are/who_we_are.scss
+++ b/styles/who-we-are/who_we_are.scss
@@ -75,7 +75,7 @@
                 display: flex;
                 padding-left: 60px;
                 margin-right: 30px;
-                min-height: 400px;
+                min-height: 430px;
                 &:before {
                         content: "";
                         background: linear-gradient(to bottom right, #d9b400 0%, #d9b400 50%, #a48d0100 50%, #a48d0100 100%);
@@ -113,6 +113,8 @@
                     display: table;
                     svg{
                         margin-bottom: 12px;
+                        // width: 55px;
+                        // height: 55px;
                     }
                     p{
                         font-size: 16px;
@@ -152,6 +154,8 @@
                     display: table;
                     svg{
                         margin-bottom: 12px;
+                        // width: 55px;
+                        // height: 55px;
                     }
                     p{
                         font-size: 16px;
