--- a/styles/privacy_/policy/privacy.css
+++ b/styles/privacy_/policy/privacy.css
@@ -2,12 +2,8 @@
   width: unset;
 }
 
-.whole_div {
-  margin-top: 6%;
-}
-
 .card1 {
-  margin-top: 6%;
+  margin-top: 4%;
   width: 100% !important;
   height: 300px;
   background-color: #665CD7;
@@ -45,7 +41,7 @@
   .card1 .row_privacy {
     color: white;
     font-size: 38px;
-    margin-top: 90px;
+    margin-top: 110px;
     -webkit-box-pack: center !important;
         -ms-flex-pack: center !important;
             justify-content: center !important;
@@ -147,22 +143,32 @@
 }
 
 .head_right {
-  margin-left: 5%;
+  margin-left: 2%;
   font-size: 16px;
   font-weight: 700;
   color: #212121;
   margin-bottom: 2%;
 }
 
-.links {
-  margin-left: 5%;
-  color: #787882;
-  font-size: 14px;
-  line-height: 20px;
+.linksz {
+  padding-left: 20px;
   margin-top: 10px;
-  display: inline-block !important;
   width: 100%;
   cursor: pointer;
+  line-height: 30px;
+  color: #595959;
+  font-weight: 400;
+  font-size: 16px;
+  display: -webkit-box !important;
+  display: -ms-flexbox !important;
+  display: flex !important;
+  position: -webkit-sticky;
+  position: sticky;
+  border: 3px solid #fff;
+}
+
+.linksz:hover {
+  color: #6450f0;
 }
 
 @media screen and (max-width: 427px) {
@@ -177,10 +183,24 @@
   }
 }
 
-p {
-  font-size: 15px;
-  line-height: 24px;
-  color: #787882;
-  margin-bottom: 20px;
+.p {
+  line-height: 30px;
+  color: #595959;
+  font-weight: 400;
+  font-size: 16px;
+}
+
+.cb-factor__item_1 {
+  width: 2px !important;
+  height: 3px !important;
+  border-radius: 1px;
+  background-color: #6450f0 !important;
+  left: 0px;
+  margin-top: 13px !important;
+  display: none;
+}
+
+.sidePadding {
+  border-left: 3px solid #665CD7;
 }
 /*# sourceMappingURL=privacy.css.map */
