--- a/styles/privacy_/policy/privacy.css
+++ b/styles/privacy_/policy/privacy.css
@@ -151,7 +151,7 @@
 }
 
 .linksz {
-  padding-left: 20px;
+  padding-left: 30px;
   margin-top: 10px;
   width: 100%;
   cursor: pointer;
@@ -162,9 +162,6 @@
   display: -webkit-box !important;
   display: -ms-flexbox !important;
   display: flex !important;
-  position: -webkit-sticky;
-  position: sticky;
-  border: 3px solid #fff;
 }
 
 .linksz:hover {
@@ -191,16 +188,20 @@
 }
 
 .cb-factor__item_1 {
-  width: 2px !important;
-  height: 3px !important;
-  border-radius: 1px;
-  background-color: #6450f0 !important;
-  left: 0px;
+  width: 3px !important;
+  height: 12px !important;
+  background-color: #fff;
+  left: -8px;
+  top: -4px;
   margin-top: 13px !important;
-  display: none;
+  display: block;
+  position: relative;
 }
 
-.sidePadding {
-  border-left: 3px solid #665CD7;
+.sidePadding .cb-factor__item_1 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  background-color: #6450f0;
 }
 /*# sourceMappingURL=privacy.css.map */
