changes made in gdpr and privacy page

--- a/styles/privacy_/policy/GPPR.css
+++ b/styles/privacy_/policy/GPPR.css
@@ -204,4 +204,4 @@
   display: flex;
   background-color: #6450f0;
 }
-/*# sourceMappingURL=privacy.css.map */
+/*# sourceMappingURL=GPPR.css.map */
