--- a/styles/privacy/privacy.css
+++ b/styles/privacy/privacy.css
@@ -76,7 +76,7 @@
 }
 
 .head_theme .head_theme {
-  font-size: 24px;
+  font-size: 20px;
   line-height: 32px;
   font-weight: 700;
   font-family: acumin-pro, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -118,8 +118,8 @@
 }
 
 .article .heads {
-  margin-top: 15px;
-  margin-bottom: 10px;
+  margin-top: 10px;
+  margin-bottom: 0px;
   color: rgba(0, 0, 0, 0.54);
   font-size: 16px;
   font-weight: 750;
@@ -161,10 +161,6 @@
   margin-left: 2px;
 }
 
-.linksz:hover {
-  color: #6450f0;
-}
-
 @media screen and (max-width: 427px) {
   .right_side {
     display: none !important;
@@ -193,6 +189,10 @@
   margin-top: 13px !important;
   display: block;
   position: relative;
+}
+
+.sidePadding {
+  color: #6450f0;
 }
 
 .sidePadding .cb-factor__item_1 {
