--- a/styles/privacy_/policy/GDPR.css
+++ b/styles/privacy_/policy/GDPR.css
@@ -76,12 +76,11 @@
 }
 
 .head_theme .head_theme {
-  font-size: 24px;
+  font-size: 22px;
   line-height: 32px;
   font-weight: 700;
-  font-family: acumin-pro, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;
   letter-spacing: .27px;
-  margin-bottom: 15px;
+  margin-bottom: 5px;
   margin-top: 0px;
   color: #212121;
 }
@@ -119,7 +118,7 @@
 
 .article .heads {
   margin-top: 15px;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
   color: rgba(0, 0, 0, 0.54);
   font-size: 16px;
   font-weight: 750;
@@ -143,7 +142,7 @@
 }
 
 .head_right {
-  margin-left: 2%;
+  margin-left: 18PX;
   font-size: 16px;
   font-weight: 700;
   color: #212121;
@@ -164,10 +163,6 @@
   display: flex !important;
 }
 
-.linksz:hover {
-  color: #6450f0;
-}
-
 @media screen and (max-width: 427px) {
   .right_side {
     display: none !important;
@@ -181,10 +176,11 @@
 }
 
 .p {
-  line-height: 30px;
+  line-height: 35px;
   color: #595959;
   font-weight: 400;
   font-size: 16px;
+  margin-bottom: 25px;
 }
 
 .cb-factor__item_1 {
@@ -196,6 +192,10 @@
   margin-top: 13px !important;
   display: block;
   position: relative;
+}
+
+.sidePadding {
+  color: #6450f0;
 }
 
 .sidePadding .cb-factor__item_1 {
