--- a/styles/productdetailsstyles/productstyles.css
+++ b/styles/productdetailsstyles/productstyles.css
@@ -3,6 +3,10 @@
   font-weight: 800 !important;
 }
 
+p {
+  margin-bottom: 0px;
+}
+
 #result {
   width: 50%;
   margin: auto;
@@ -35,7 +39,7 @@
 }
 
 .product-head h1 {
-  padding-top: 55px;
+  padding-top: 80px;
   font-size: 45px;
   letter-spacing: 1px;
   font-weight: 800 !important;
@@ -82,6 +86,13 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+}
+
+#abc {
+  position: -webkit-sticky !important;
+  position: sticky !important;
+  top: 100px;
+  padding-top: 17px;
 }
 
 .alphabet {
