--- a/styles/productdetailsstyles/productstyles.scss
+++ b/styles/productdetailsstyles/productstyles.scss
@@ -3,6 +3,9 @@
     font-weight: 800 !important;
   
 }
+p{
+    margin-bottom: 0px;
+}
 #result{
     width: 50%;
     margin: auto;
@@ -31,7 +34,7 @@
     margin-top: 5%;
     position: relative;
     h1{
-    padding-top: 55px;
+    padding-top: 80px;
     font-size: 45px;
     letter-spacing: 1px;
     font-weight: 800 !important;
@@ -71,7 +74,13 @@
 .Row{
     display: flex;
 }
+#abc{
+    position: sticky !important;
+    top: 100px;
+    padding-top: 17px;
+}
 .alphabet{
+    
     width: 20%;
     a{
         outline: none;
@@ -80,6 +89,8 @@
         font-weight: 300;
         // color: #75758a;
         color: #595959;
+        // position: sticky !important;
+        // top: 10px;
         margin: 10px auto;
         text-transform: uppercase;
         font-size: 16px;
