--- a/styles/privacy/privacy.scss
+++ b/styles/privacy/privacy.scss
@@ -175,4 +175,12 @@
         }
         
     }
+
+    .sidePadding_test{
+        color: #6450f0 ;
+        .cb-factor__item_1 {
+          display:flex;
+          background-color: #6450f0 ;
+        }
+    }
     
