--- a/styles/privacy_/policy/GDPR.scss
+++ b/styles/privacy_/policy/GDPR.scss
@@ -25,16 +25,14 @@
             font-size      : 24px;
             margin-top     : 130px;
             justify-content: center !important;
-        }
-    }
+        }}
     @media screen and (max-width: 1024px) and (min-width: 603px) {
         .row_privacy {
             color          : white;
             font-size      : 38px;
             margin-top     : 110px;
             justify-content: center !important;
-        }
-    }
+        }}
     .row_date {
         color          : rgba(255, 255, 255, .6);
         margin-top     : 10px;
@@ -44,20 +42,18 @@
         color          : rgba(255, 255, 255, .6);
         margin-top     : 10px;
         justify-content: center;
-    }
-}
+    }}
 .container {
     .head_row {
         margin-top: 6% !important;
-    }
-}
+    }}
 .class_1 {
     .para1 {
         font-size    : 15px;
         line-height  : 24px;
         color        : #787882;
         margin-bottom: 21px;
-    }
+     }
 }
 .head_theme {
     .head_theme {
@@ -77,8 +73,7 @@
             left            : -10px;
             margin-top      : 10px !important;
             margin-right    : 12px;
-    }
-}
+    }}
 .head_theme1 {
     .head_theme1 {
         font-size     : 17px;
@@ -89,8 +84,7 @@
         margin-bottom : 10px;
         margin-top    : 0;
         color         : #212121;
-    }
-      }
+    } }
 .article {
     .cb-factor__item {
         width           : 12px;
@@ -154,9 +148,7 @@
         color: #595959;
         font-weight: 400;
         font-size: 16px;
-        margin-bottom:25px;
-       
-       
+        margin-bottom:25px; 
     }
     .cb-factor__item_1 {
         width: 3px !important;
@@ -167,17 +159,13 @@
         margin-top: 13px !important;
         display: block; 
         position: relative;
-       
-    }
+       }
     .sidePadding {
         color:#6450f0 ;
         .cb-factor__item_1 {
           display:flex;
           background-color: #6450f0 ;
-         
-        }
-        
-    }
+        }}
     
           
     
