--- a/styles/privacy/privacy.css
+++ b/styles/privacy/privacy.css
@@ -68,6 +68,23 @@
   margin-top: 6% !important;
 }
 
+.paragraph {
+  line-height: 30px;
+  margin-bottom: 23px;
+  color: #595959;
+}
+
+.sub-paragraph {
+  line-height: 30px;
+  margin-bottom: 23px;
+  color: #595959;
+}
+
+.sub-head {
+  margin-bottom: 10px;
+  color: #595959;
+}
+
 .class_1 .para1 {
   font-size: 15px;
   line-height: 24px;
@@ -119,7 +136,7 @@
 
 .article .heads {
   margin-top: 10px;
-  margin-bottom: 0px;
+  margin-bottom: 25px;
   color: rgba(0, 0, 0, 0.54);
   font-size: 16px;
   font-weight: 750;
