--- a/styles/privacy/privacy.scss
+++ b/styles/privacy/privacy.scss
@@ -51,6 +51,20 @@
         margin-top: 6% !important;
     }
 }
+.paragraph{
+    line-height: 30px;
+    margin-bottom: 23px;
+    color: #595959;
+}
+.sub-paragraph{
+    line-height: 30px;
+    margin-bottom: 23px;
+    color: #595959;
+}
+.sub-head{
+    margin-bottom: 10px;
+    color: #595959;
+}
 .class_1 {
     .para1 {
         font-size    : 15px;
@@ -107,7 +121,7 @@
     }
     .heads {
         margin-top   : 10px;
-        margin-bottom: 0px;
+        margin-bottom: 25px;
         color        : rgba(0, 0, 0, .54);
         font-size    : 16px;
         font-weight  : 750;
