--- a/styles/privacy_/policy/GDPR.scss
+++ b/styles/privacy_/policy/GDPR.scss
@@ -1,6 +1,53 @@
 .body {
     width: unset;
 }
+.para-list{
+    margin-bottom: 20px;
+}
+.resources{
+    position: relative;
+   
+}
+
+.span-position{
+    position: relative;
+    transition-timing-function: ease-in;
+    &:hover .dropdown{
+
+        display: block;
+    }
+    
+}
+.dropdown{
+    display: none;
+    position: absolute;
+    background-color: #fff;
+    top: 50px;
+    z-index: 13;
+    left: -25px;
+    width: 130px;
+    
+    border-radius: 4px;
+    box-shadow: 0px 2px 7px 0px rgba(51, 74, 192, 0.12);
+    #glossary{
+        margin: 0;
+        width: 100%;
+        color: black;
+        display: block;
+        padding: 10px 28px;
+        border-bottom: 1px solid #6c757d1f;
+        text-align: left;
+    }
+    #blog{
+        margin: 0;
+        width: 100%;
+        color: black;
+        display: block;
+        padding: 10px 29px;
+        border-bottom: 1px solid #6c757d1f;
+        text-align: left;
+    }
+}
 .card1 {
     margin-top: 4%;
     width           : 100% !important;
@@ -50,10 +97,15 @@
 .class_1 {
     .para1 {
         font-size    : 15px;
-        line-height  : 24px;
+        line-height  : 18px;
         color        : #787882;
         margin-bottom: 21px;
      }
+}
+.paragraph{
+    line-height: 30px;
+    margin-bottom: 23px;
+    color: #595959;
 }
 .head_theme {
     .head_theme {
@@ -61,7 +113,7 @@
         line-height   : 32px;
         font-weight   : 700;
         letter-spacing: .27px;
-        margin-bottom : 5px;
+        margin-bottom : 30px;
         margin-top    : 0px;
         color         : #212121;
     }
@@ -96,11 +148,11 @@
         margin-right    : 12px;
     }
     .heads {
-        margin-top   : 15px;
-        margin-bottom:20px;
-        color        : rgba(0, 0, 0, .54);
-        font-size    : 16px;
-        font-weight  : 750;
+        margin-top   : 25px;
+        margin-bottom:14px;
+        color        : #00000091;
+        font-size    : 18px;
+        font-weight  : 700;
         display      : flex;
         margin-left  : 0px !important;
     }}
