--- a/styles/styles.css
+++ b/styles/styles.css
@@ -193,6 +193,21 @@ body {
   border-bottom-right-radius: 30px;
 }
 
+.sub-menu {
+  display: none;
+  background-color: #665cd7;
+  border-bottom: 1px solid #717176;
+  text-decoration: none;
+  font-size: 18px;
+  line-height: 2.4;
+  width: 100%;
+}
+
+.sub-menu a {
+  width: 100%;
+  color: white;
+}
+
 .header_mobile ul.menu li.menu-item a {
   display: block;
   position: relative;
@@ -475,7 +490,6 @@ body {
 }
 
 .header {
-  overflow: hidden;
   background-color: #ffffff;
   padding: 12px 10px 12px 10px;
   width: 100%;
@@ -597,6 +611,62 @@ body {
   outline: none;
   -webkit-box-shadow: none;
           box-shadow: none;
+}
+
+.resources {
+  position: relative;
+}
+
+a:hover {
+  text-decoration: none;
+}
+
+.span-position {
+  position: relative;
+  -webkit-transition-timing-function: ease-in;
+          transition-timing-function: ease-in;
+}
+
+.span-position:hover .dropdown {
+  display: block;
+}
+
+.dropdown {
+  display: none;
+  position: absolute;
+  background-color: #fff;
+  top: 50px;
+  z-index: 13;
+  left: -25px;
+  width: 130px;
+  border-radius: 4px;
+  -webkit-box-shadow: 0px 2px 7px 0px rgba(51, 74, 192, 0.12);
+          box-shadow: 0px 2px 7px 0px rgba(51, 74, 192, 0.12);
+}
+
+.dropdown #glossary {
+  margin: 0;
+  width: 100%;
+  color: black;
+  display: block;
+  padding: 10px 28px;
+  border-bottom: 1px solid #6c757d1f;
+  text-align: left;
+}
+
+.dropdown #blog {
+  margin: 0;
+  width: 100%;
+  color: black;
+  display: block;
+  padding: 10px 29px;
+  border-bottom: 1px solid #6c757d1f;
+  text-align: left;
+}
+
+.header_text {
+  position: relative;
+  z-index: 1;
 }
 
 .transparent_header {
@@ -817,7 +887,7 @@ body {
 }
 
 .who_you_are .card_div .card-- {
-  cursor: pointer;
+  cursor: context-menu;
   background-color: #FFE953;
   padding: 54px;
   border-radius: 9px;
