--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -246,6 +246,22 @@ body{
     border-bottom-right-radius: 30px;
     
 }
+.sub-menu {
+    display: none;
+    background-color: #665cd7;
+    border-bottom:1px solid #717176;
+    
+	text-decoration: none;
+	font-size: 18px;
+	line-height: 2.4;
+	width: 100%;
+  
+    a{
+        width:100%;
+        
+        color:white;
+    }
+}
 .header_mobile ul.menu li.menu-item a {
 	display: block;
 	position: relative;
@@ -475,7 +491,7 @@ body{
 }
 
 .header {
-    overflow: hidden;
+    // overflow: hidden;
     background-color: #ffffff;
     padding: 12px 10px 12px 10px;
     // position: fixed;
@@ -534,6 +550,7 @@ body{
                     color: $primary-color;
                 }
             }
+            
             tag{
                 font-size: 10px;
                 padding: 3px 4px;
@@ -581,7 +598,58 @@ body{
     } 
   }
 }
+.resources{
+    position: relative;
+   
+}
+a:hover{
+    text-decoration: none;
+}
+.span-position{
+    position: relative;
+    transition-timing-function: ease-in;
+    &:hover .dropdown{
 
+        display: block;
+    }
+    
+}
+.dropdown{
+    display: none;
+    position: absolute;
+    background-color: #fff;
+    top: 50px;
+    z-index: 13;
+    left: -25px;
+    width: 130px;
+    
+    border-radius: 4px;
+    box-shadow: 0px 2px 7px 0px rgba(51, 74, 192, 0.12);
+    #glossary{
+        margin: 0;
+        width: 100%;
+        color: black;
+        display: block;
+        padding: 10px 28px;
+        border-bottom: 1px solid #6c757d1f;
+        text-align: left;
+    }
+    #blog{
+        margin: 0;
+        width: 100%;
+        color: black;
+        display: block;
+        padding: 10px 29px;
+        border-bottom: 1px solid #6c757d1f;
+        text-align: left;
+    }
+}
+
+
+.header_text{
+    position: relative;
+    z-index: 1;
+}
 .transparent_header{
     background-color: transparent;
     .row {
@@ -779,7 +847,7 @@ body{
         }
         text-align: left;
         .card--{
-            cursor: pointer;
+            cursor: context-menu;
             background-color: $card-background-color;
             // background-color: #B3EFFF;
             padding: 54px;
