--- a/styles/productdetailsstyles/productstyles.scss
+++ b/styles/productdetailsstyles/productstyles.scss
@@ -6,6 +6,11 @@
 p{
     margin-bottom: 0px;
 }
+#glossary{
+  
+        color: #665CD7 !important;
+   
+}
 #result{
     width: 50%;
     margin: auto;
