--- a/styles/privacy_/policy/GDPR.css
+++ b/styles/privacy_/policy/GDPR.css
@@ -43,6 +43,10 @@
   text-align: left;
 }
 
+.dropdown #glossary:hover {
+  color: #665CD7;
+}
+
 .dropdown #blog {
   margin: 0;
   width: 100%;
@@ -51,6 +55,10 @@
   padding: 10px 29px;
   border-bottom: 1px solid #6c757d1f;
   text-align: left;
+}
+
+.dropdown #blog:hover {
+  color: #665CD7;
 }
 
 .card1 {
