--- a/styles/privacy_/policy/GDPR.scss
+++ b/styles/privacy_/policy/GDPR.scss
@@ -37,6 +37,9 @@
         padding: 10px 28px;
         border-bottom: 1px solid #6c757d1f;
         text-align: left;
+        &:hover{
+            color: #665CD7;
+        }
     }
     #blog{
         margin: 0;
@@ -46,6 +49,9 @@
         padding: 10px 29px;
         border-bottom: 1px solid #6c757d1f;
         text-align: left;
+        &:hover{
+            color: #665CD7;
+        }
     }
 }
 .card1 {
