--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -633,6 +633,9 @@ a:hover{
         padding: 10px 19px;
         border-bottom: 1px solid #6c757d1f;
         text-align: left;
+        &:hover{
+            color: #665CD7;
+        }
     }
     #blog{
         margin: 0;
@@ -642,6 +645,9 @@ a:hover{
         padding: 10px 20px;
         border-bottom: 1px solid #6c757d1f;
         text-align: left;
+        &:hover{
+            color: #665CD7;
+        }
     }
 }
 
