--- a/styles/styles.css
+++ b/styles/styles.css
@@ -631,6 +631,12 @@ a:hover {
   display: block;
 }
 
+svg {
+  padding-top: 10px;
+  height: 35px;
+  width: 25px;
+}
+
 .dropdown {
   display: none;
   position: absolute;
@@ -664,6 +670,7 @@ a:hover {
   color: black;
   display: block;
   padding: 10px 20px;
+  padding-bottom: 20px;
   border-bottom: 1px solid #6c757d1f;
   text-align: left;
 }
